--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -60,12 +60,53 @@
 
         </com.google.android.material.appbar.AppBarLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/repos"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:visibility="gone"
+                android:id="@+id/repos"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+            <com.facebook.shimmer.ShimmerFrameLayout
+                android:id="@+id/shimmer_view_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:padding="12dp"
+                app:duration="800">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@color/white"
+                    android:orientation="vertical">
+
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+                    <include layout="@layout/item_repo_shimmer" />
+
+                </LinearLayout>
+
+            </com.facebook.shimmer.ShimmerFrameLayout>
+
+        </FrameLayout>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
