--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,6 @@
     <color name="active_icon_color">#8A000000</color>
     <color name="cards_and_dialogs_color">@android:color/white</color>
     <color name="quantum_grey_600">#757575</color>
+
+    <color name="background">#dddddd</color>
 </resources>
